<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">AncillaryScreens</string>
    <string name="about_us">About Us</string>
    <string name="base_url_assessment_module" translatable="false" tools:ignore="MissingTranslation">http://139.59.55.86/api/v1/</string>
    <string name="both_cannot_change_at_same_time">Both Phone number and email cannot change at the same time. Please try with one first.</string>
    <string name="btn_backspace">Back</string>
    <string name="btn_clear">Clear</string>
    <string name="category">Category</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="contact_admin_for_this">It looks like there is no user registered with this mobile number.\n Please contact helpline to get password reset.</string>
    <string name="correct_words">Correct words</string>
    <string name="dummy_block">Select Block</string>
    <string name="dummy_district">Select District</string>
    <string name="dummy_school_name">Select School</string>
    <string name="dummy_student_grade">\u0020\u0020Select Grade</string>
    <string name="dummy_student_id">\u0020\u0020Select Student\'s ID</string>
    <string name="dummy_student_name">\u0020\u0020Select Student\'s Name</string>
    <string name="email_not_unique">Phone number is not unique</string>
    <string name="empty_otp">OTP cannot be empty.</string>
    <string name="empty_password_error">Password cannot be empty</string>
    <string name="enrollment" tools:ignore="MissingTranslation">Enrolment as per UDISE</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_new_password1">Enter new password</string>
    <string name="enter_otp">Enter OTP Received</string>
    <string name="enter_the_registered_mobile_number_associated_with_your_account">Enter the registered Mobile number associated with your account.</string>
    <string name="enter_udise">Enter UDISE</string>
    <string name="enter_valid_number">Please enter a valid mobile number.</string>
    <string name="enter_your_password">Enter Password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="error_in_change_pass">The server responded with an error. Please retry again</string>
    <string name="error_message_search">\u0020\u0020Please fill in all the relevant details of the school.</string>
    <string name="error_sending_otp">Error sending OTP. Please contact admin.</string>

    <string name="errorlogin">There was error in logging you into the applciation. Please try again.</string>
    <string name="forgot_pass">Reset App Password</string>

    <string name="forgot_the_password">Forgot the Password?</string>
    <string name="fusionauth_api_key" translatable="false">YFpyHxhW0-NoKRwQrXgCU5QIAQq8nBNhE--i5_n3pTU</string>
    <string name="hindi">Hindi</string>
    <string name="incorrect_credentials">Username or Password didn\'t match. Please try again</string>
    <string name="internet_not_connected">It seems you are not connected to the internet. Please switch on your mobile data to change password.</string>

    <string name="internet_not_connected_error_login">It seems you are not connected to the Internet. Please switch on your Mobile Data to login.</string>
    <string name="internet_not_connected_otp">It seems you are not connected to the internet. Please switch on your mobile data/connect to Wi-fi to receive OTP</string>
    <string name="internet_not_connected_profile_screen">It seems you are not connected to the internet. Please switch on your mobile data/connect to Wi-fi to update your profile</string>

    <string name="invalid_email">Invalid Email ID</string>
    <string name="invalid_phone_number" tools:ignore="MissingTranslation">Please check the entered mobile number.</string>

    <string name="less_than_8_pass" tools:ignore="MissingTranslation">Password cannot be less than 8 characters</string>

    <string name="let_s_start_again" tools:ignore="MissingTranslation">CLOSE APP</string>
    <string name="log_in">LOG IN</string>
    <string name="logging_in">Logging you in</string>
    <string name="updating_details">Updating Details</string>
    <string name="login">Login</string>
    <string name="login_failed_error">Username or Password didn\'t match. Please try again</string>
    <string name="logout">Logout</string>
    <string name="update_failed">User details failed to update.</string>
    <string name="mulitple_users_same_email_found" tools:ignore="MissingTranslation">Multiple users with the same email found. Please ensure that your email is not used by any other account or Contact Admin.</string>
    <string name="mulitple_users_same_phone_found">Multiple users with the same phone number found. Please check that you have not registered your entered contact number for any other username on Saksham Samiksha or Contact Admin.</string>
    <string name="next">NEXT</string>
    <string name="no_internet_saving_complete" translatable="false">Thank you for filling the inspection report for. Since you have filled the report in offline mode, please manually submit the form when connected to the internet from the "Submit form" option</string>
    <string name="no_users_found">No Users Found.</string>
    <string name="multiple_users_found">Multiple Users Found.</string>
    <string name="not_connected_to_internet">It seems you are not connected to the Internet. Please switch on your Mobile Data to login.</string>
    <string name="not_unique_email">Email Address is not unique </string>
    <string name="verification_code_subtext">Please type the verification code sent to +91-xxxxxxxx</string>
    <string name="verification_code">Verification Code</string>
    <string name="validate">VALIDATE</string>
    <string name="not_unique_phone">Phone number is not unique </string>
    <string name="number_eight">8</string>
    <string name="number_five">5</string>
    <string name="number_four">4</string>
    <string name="number_nine">9</string>
    <string name="number_one">1</string>
    <string name="number_seven">7</string>
    <string name="number_six">6</string>
    <string name="number_three">3</string>
    <string name="number_two">2</string>
    <string name="number_zero">0</string>
    <string name="oh_no" tools:ignore="MissingTranslation">Oh no!</string>
    <string name="on_internet_saving_complete" translatable="false">Thanks for filling the inspection report. Your report has been submitted</string>
    <string name="or">OR</string>
    <string name="otp"> OTP </string>

    <string name="otp_length">OTP should be of 4 digits</string>
    <string name="otp_sent_change_pwd">OTP sent. Please retry changing the password.</string>

    <string name="otp_sent_successfully">OTP successfully sent to %s</string>
    <string name="otp_successfully_sent">OTP successfully sent to this number</string>

    <string name="pass_cannot_be_empty">Password cannot be empty</string>
    <string name="pass_change_successful">The password has been successfully changed. You need to login again to continue.\nClick OK to go to login page</string>


    <string name="pass_changed_redirecting">The password has been successfully changed. Click OK to go back to profile page</string>
    <string name="pass_did_not_match">Passwords didn\'t match.</string>

    <string name="pass_less_than_8_error">Password has to be at least 8 characters</string>
    <string name="password">Password</string>
    <string name="password_changed">Password has been successfully changed.</string>
    <string name="password_changing">Password is being changed.</string>
    <string-array name="category_of_user_shiksha_sathi">
        <item>Not Applicable</item>
        <item>Additional Charge</item>
        <item>Stopgap Arrangement (BRCCs)</item>
    </string-array>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_email_not_simultaneous">Both Phone number and email cannot change at the same time. Please try with one first.</string>
    <string name="phone_number_not_unique">Phone number is not unique</string>
    <string name="please_enter_the_otp">Please enter the OTP sent to the associated mobile number.</string>
    <string name="please_enter_the_otp_sent_to_the_mobile_number_of_school_incharge" tools:ignore="MissingTranslation">Please enter the OTP sent to the associated mobile number.</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="proceed">PROCEED AHEAD</string>
    <string name="profile">Profile</string>
    <string name="profile_contact_message" translatable="false">These following fields cannot be updated. In case there is any issue, contact admin.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp_password">Resend OTP</string>
    <string name="resend_otp_profile">Resend OTP</string>
    <string name="reset_here">Reset here</string>
    <string name="reset_password">Reset Password</string>
    <string name="verify_phone">Verify Phone number</string>
    <string name="retake_test">RETAKE TEST</string>
    <string name="school">SCHOOL</string>
    <string name="seconds_remaining" tools:ignore="MissingTranslation">Seconds Remaining:&#032;&#032;</string>

    <string name="select_below">Select below</string>
    <string name="send_otp"> Send OTP </string>
    <string name="sending_otp">Sending OTP</string>
    <string name="sending_the_request">Sending the Request</string>
    <string name="set_new_password">Reset Password</string>

    <string name="settings">Settings</string>
    <string name="short_password_error">Password has to be at least 8 characters</string>
    <string name="snackbar_no_dashboard">This page will be linked to the Metabase dashboard to view total assessments done by the invigilator searchable by days.</string>

    <string name="submit">SUBMIT</string>
    <string name="successful_logout_message">You have successfully logged out.</string>
    <string name="successful_update">User Details successfully updated.</string>
    <string name="these_following_fields_cannot_be_updated_in_case_there_is_any_issue_contact_admin_edudata_hp_gmail_com">These following fields cannot be updated. In case there is any issue, contact admin.</string>
    <string name="time_taken_in_seconds">Time taken (in seconds)</string>
    <string name="tutorial">Tutorial Videos</string>
    <string name="udise">UDISE</string>
    <string name="unable_to_log_out">Unable to log out, Please try again.</string>
    <string name="unable_to_send_OTP">OTP could not be sent.</string>
    <string name="unexpected_error_occured" tools:ignore="MissingTranslation">Something unexpected has occurred.</string>
    <string name="update">UPDATE</string>
    <string name="update_cancel_1">To update the language on the app, select the language and click on Update.\nPlease restart the phone to update the language.</string>
    <string name="update_failed_due_to_internet" tools:ignore="MissingTranslation">User details failed to update. Please check your internet!</string>
    <string name="updating_user_profile">Updating your profile.... </string>
    <string name="user_name_empty_error">Username cannot be empty</string>
    <string name="user_name_not_apt_length_error">Username has to be more than characters</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="view_issues" translatable="false">View Dashboard</string>
    <string name="welcome_heading_login_screen">Welcome Back!</string>
    <string name="try_otp_for_no_phone">Please check if you have mobile number registered in your profile and if you are entering a valid number, if registered.</string>
    <string name="change_details">CHANGE DETAILS</string>
    <string name="unable_to_change_school">Unable to update the school info.</string>
    <string name="school_changed">School Details have been updated successfully.</string>
    <string name="school_code">School Code : %s</string>
    <string name="school_name_label">Name : %s</string>
    <string name="school_block_label">Block: %s</string>
    <string name="school_district_label">District: %s</string>
    <string name="if_your_school_details_are_incorrect_please_click_here_to_edit">If your school details are incorrect, Please click here to edit.</string>
    <string name="enter_phone_register">Enter your mobile number to receive One time password for verification</string>
    <string name="faqs_for_teachers_school_heads">FAQs For Teachers/School Heads</string>
    <string name="faqs_for_mentors">FAQs For Mentors</string>
</resources>
